--- a/translations/messages.fr.json
+++ b/translations/messages.fr.json
@@ -264,6 +264,54 @@
       }
     }
   },
+    "guest_register": {
+    "title_page": "Créer mon compte",
+    "hero": {
+      "title": "Bienvenue sur MYKEYNEST",
+      "subtitle": "Vous avez été invité à rejoindre l'espace de gestion d'identifiants partagés. Créez votre mot de passe pour accéder à votre compte.",
+      "guest_card_label": "Compte invité",
+      "features": {
+        "secure_access": "Accès sécurisé aux identifiants partagés",
+        "e2ee": "Chiffrement de bout en bout",
+        "one_time_link": "Lien à usage unique — expire après activation"
+      }
+    },
+    "form": {
+      "header_title": "Créez votre mot de passe",
+      "header_subtitle": "Plus qu'une étape pour accéder à vos identifiants partagés.",
+      "email_readonly_label": "Adresse e-mail",
+      "password_label": "Mot de passe",
+      "password_placeholder": "••••••••",
+      "password_hint_default": "Minimum 8 caractères",
+      "password_confirm_label": "Confirmer le mot de passe",
+      "password_confirm_placeholder": "••••••••",
+      "submit": "Créer mon compte →",
+      "already_account": "Déjà un compte ?",
+      "login_link": "Se connecter"
+    },
+    "strength": {
+      "min": "Minimum 8 caractères",
+      "very_weak": "Très faible",
+      "weak": "Faible",
+      "medium": "Moyen",
+      "strong": "Fort",
+      "very_strong": "Très fort"
+    },
+    "validation": {
+      "password_too_short": "Le mot de passe doit contenir au moins 8 caractères.",
+      "passwords_not_match": "Les mots de passe ne correspondent pas.",
+      "passwords_match": "Les mots de passe correspondent."
+    },
+    "flash": {
+      "generic_error": "Une erreur est survenue. Réessayez.",
+      "generic_success": "Votre compte a été créé. Vous pouvez vous connecter."
+    },
+    "token": {
+      "missing": "Lien d'invitation invalide.",
+      "expired": "Ce lien d'invitation a expiré.",
+      "already_used": "Ce lien a déjà été utilisé."
+    }
+  },
   "auth": {
     "login": {
       "hero": {
